# NXP-SE050-Rotate_PlatformSCPKeys_new

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  platformio.ini  sdkconfig.defaults
components/se050/: CMakeLists.txt  ex_sss_auth.h  i2c_esp32.c  timer_esp32.c
src/: CMakeLists.txt  main.c  se05x_TP_PlatformSCP03keys.h
